--- a/main/ui/tui.css
+++ b/main/ui/tui.css
@@ -1,3 +1,22 @@
-TermChat {
-    layout: horizontal;
+Screen {
+    layout: vertical;
+}
+
+.content_box {
+    height: 3fr;
+    border: solid green;
+}
+
+.blank {
+    background: blue 70%;
+    height: 4;
+    border: wide black;
+}
+
+.center_label{
+    content-align-horizontal: center;
+    content-align-vertical: middle;
+    width: 100%;
+    height: 1;
+    color: white;
 }
