--- a/main/ui/tui.css
+++ b/main/ui/tui.css
@@ -1,3 +1,8 @@
+Screen {
+    align: center middle;
+    /*layers: below above;*/
+    /*border: solid green;*/
+}
 /* LazyChat */
 .horizontal {
     width: 20%;
