Stable lazyChat v0.21 Add NoticeAddUser of MySQL

--- a/LazyChat/ui/tui.css
+++ b/LazyChat/ui/tui.css
@@ -1,7 +1,6 @@
 Screen {
     align: center middle;
-    /*layers: below above;*/
-    /*border: solid green;*/
+    layers: basic above;
 }
 /* LazyChat */
 
